# tibble_redo

./: .dockerignore  .env.example  .gitignore
config/zenoh/: competition_client.json5  competition_router.json5  remote.json5
doc/: CMake_design.md  TODO.md  controller_design.md  gamepad_design.md  ignition.md  network_stack.md  thought_vomit.md
docker/: Dockerfile  compose-base.yaml  compose.linux.yaml  compose.windows.yaml  compose.yaml  docker-compose.yaml  docker_instructions.md  windows_instructions.md  zenoh_client.json5
src/bringup/: package.xml  setup.py
src/bringup/config/: teleop.rviz  view_urdf.rviz
src/bringup/launch_files/: teleop.launch.py  view_urdf.launch.py
src/control/: CMakeLists.txt  package.xml
src/control/config/: gamepad.yaml  joystick.yaml  tibble_controller.xml  tibble_controller.yaml  tibble_hardware_component.xml  tibble_hardware_interface.xml
src/control/include/control/: command_center.hpp  tibble_controller.hpp
src/control/src/: change_state_server.cpp  command_center.cpp  tibble_controller.cpp
src/description/: package.xml  setup.py
src/description/urdf/: gazebo.xacro  ros2_control.xacro  sensors.xacro  tibble.urdf.xacro  tibble_core.xacro  tibble_core_old.xacro
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: ManualCommands.msg  StateMachineCommands.msg
src/interfaces/srv/: ChangeState.srv
src/launch/: package.xml  setup.py
src/launch/launch/: teleop.launch.py
