<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bringup</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="moodyellam@gmail.com">ellam</maintainer>
  <license>Apache-2.0</license>

  <exec_depend>description</exec_depend>
  <exec_depend>control</exec_depend>
  <exec_depend>interfaces</exec_depend>

  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rmw_zenoh_cpp</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
